wayyyyy better on mobile now. fixed scroll weirdness with open modals. drag on drop mobile is beautiful. fixed delete item on mobile error. more things

--- a/tierator-vue/src/assets/main.css
+++ b/tierator-vue/src/assets/main.css
@@ -1,5 +1,9 @@
 @import './base.css';
 
+html.no-scroll {
+  overflow: hidden;
+}
+
 #app {
   margin: 0;
   padding: 0;
